src/app.css
@font-face {
  font-family: "Lato";
  src: local("Lato-Regular"), url("/fonts/Lato-Regular.woff2");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Lato";
  src: local("Lato-Bold"), url("/fonts/Lato-Bold.woff2");
  font-weight: 700;
  font-style: normal;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

